修复部分方块逻辑